Sample in texture paint causes instant shutdown #64403

Closed
opened 2019-05-09 19:52:47 +02:00 by Chris Perron · 13 comments

System Information
Operating system: Windows 7 64 Bit
Graphics card: Geforce GTX 570

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Hit (s) in texture paint mode to sample color, instant crash.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Take the cube, smart UV unwrap, give it a texture to start texture painting. Draw a color. Then hit (s) to sample the color, Blender quits.

**System Information** Operating system: Windows 7 64 Bit Graphics card: Geforce GTX 570 **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Hit (s) in texture paint mode to sample color, instant crash. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Take the cube, smart UV unwrap, give it a texture to start texture painting. Draw a color. Then hit (s) to sample the color, Blender quits.
Author

Added subscriber: @ctperron

Added subscriber: @ctperron

#64566 was marked as duplicate of this issue

#64566 was marked as duplicate of this issue

#64509 was marked as duplicate of this issue

#64509 was marked as duplicate of this issue

#64545 was marked as duplicate of this issue

#64545 was marked as duplicate of this issue

#64538 was marked as duplicate of this issue

#64538 was marked as duplicate of this issue

#64489 was marked as duplicate of this issue

#64489 was marked as duplicate of this issue

Added subscriber: @viadvena

Added subscriber: @viadvena

Added subscriber: @billyand

Added subscriber: @billyand
Member

Added subscriber: @ssendam

Added subscriber: @ssendam

This issue was referenced by 44fc8aa221

This issue was referenced by 44fc8aa2216314c1e9418a85140c86bf6bc587bf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @nobi08, @fclem, @lichtwerk

Added subscribers: @nobi08, @fclem, @lichtwerk

Added subscriber: @ogalfaro

Added subscriber: @ogalfaro
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64403
No description provided.