Fix T64403: crash sampling coloring in texture paint mode